--- a/templates/scraping/home.html
+++ b/templates/scraping/home.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
     <div class="row">
-        <div class="col-md-6 mx-auto">
-            <form action="">
+        <div class="col"><h2 class="text-center my-3">Сервис по сбору и рассылки вакансий</h2></div>
+    </div>
+    <div class="row">
+        <div class="col-md-8 mx-auto">
+            <h4 class="my-2">Для просмотра доступных вакансий заполните форму по одному из полей (либо город, либо язык программирования).</h4>
+            <form action="{% url 'list' %}" method="get">
                 <div class="form-select form-select-lg mb-3 my-2">
                     {{ form.as_p }}
                 </div>
@@ -12,22 +15,6 @@
             </form>
         </div>
     </div>
-
-
-    {% for obj in object_list %}
-        <div class="card my-3">
-            <h5 class="card-header"><a href="{{ obj.url }}">{{ obj.title }}</a></h5>
-            <div class="card-body">
-                <h5>{{ obj.company }}</h5>
-                <p class="card-text">{{ obj.description|truncatewords:50 }}</p>
-                <p>{{ obj.city.name }} | {{ obj.language.name }} | <small>{{ obj.date_create }}</small></p>
-
-            </div>
-        </div>
-    {% empty %}
-        <h3>К сожалению по вашему запросу ничего не найдено.</h3>
-
-    {% endfor %}
 
 {% endblock %}
 
