--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,5 +1,21 @@
 {% extends 'base.html' %}
 
+{% block title %} Register {% endblock %}
+
 {% block content %}
-    <h1>Register now</h1>
+
+    <div class="row">
+        <div class="col-md-8 mx-auto">
+            <h4 class="my-2">Регистрация нового пользователя</h4>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <div class="form-select form-select-lg mb-3 my-2">
+                    {{ form.as_p }}
+                </div>
+                <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+            </form>
+        </div>
+    </div>
+
 {% endblock %}
+
