--- a/templates/base.html
+++ b/templates/base.html
@@ -12,31 +12,37 @@
     <title class="header">{% block title %}{{ title }}{% endblock %}</title>
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                <a class="nav-link" href="#">About</a>
-                <a class="nav-link" href="{% url 'register' %}">Register</a>
-                {% if request.user.is_authenticated %}
-                    <a href="{% url 'admin:index' %}"><button>AdminSite</button></a>
-                    {% if request.user.is_superuser %}
-                        <a href="{% url 'admin:index' %}"><button>AdminSite</button></a>
+<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                    <a class="nav-link" href="#">About</a>
+                    {% if request.user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+                        {#                        <a href="{% url 'admin:index' %}">#}
+                        {#                            <button>AdminSite</button>#}
+                        {#                        </a>#}
+                        {% if request.user.is_superuser %}
+                            <a href="{% url 'admin:index' %}">
+                                <button>AdminSite</button>
+                            </a>
+                        {% endif %}
+                    {% else %}
+                        <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
+                        <a class="nav-link" href="{% url 'accounts:register' %}">Регистрация</a>
                     {% endif %}
-                {% endif %}
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
-
+    </nav>
+</div>
 <div class="container">{% block content %} {% endblock %}</div>
 
 <!-- Optional JavaScript; choose one of the two! -->
