--- a/templates/scraping/home.html
+++ b/templates/scraping/home.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 
+{% block title %} Home {% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="col"><h2 class="text-center my-3">Сервис по сбору и рассылки вакансий</h2></div>
     </div>
     <div class="row">
         <div class="col-md-8 mx-auto">
-            <h4 class="my-2">Для просмотра доступных вакансий заполните форму по одному из полей (либо город, либо язык программирования).</h4>
+            <h4 class="my-2">Для просмотра доступных вакансий заполните форму по одному из полей (либо город, либо язык
+                программирования).</h4>
             <form action="{% url 'list' %}" method="get">
                 <div class="form-select form-select-lg mb-3 my-2">
                     {{ form.as_p }}
